--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=7.1.3",
         "illuminate/mail": "^5.8",
-        "laravel/lumen-framework": "5.8.*"
+        "laravel/lumen-framework": "5.8.*",
+        "simplesoftwareio/simple-qrcode": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
