--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,7 @@ MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=vms.wwi17sca@gmail.com
 MAIL_FROM_NAME="VMS - Mobile Apps"
 
-
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+JWT_SECRET=
