--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,14 @@
         "mockery/mockery": "^1.0"
     },
     "autoload": {
+        "files": [
+            "app/iCalendar.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories",
             "app/Models"
         ],
-        "files": [],
         "psr-4": {
             "App\\": "app/"
         }
